:Issue_96: link:https://github.com/AnssiR66/AlanStdLib/issues/96[Issue&nbsp;#96^, title="See original Issue on GitHub"]
:Issue_99: link:https://github.com/AnssiR66/AlanStdLib/issues/99[Issue&nbsp;#99^, title="See original Issue on GitHub"]
:Issue_106: link:https://github.com/AnssiR66/AlanStdLib/issues/106[Issue&nbsp;#106^, title="See original Issue on GitHub"]
// <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<


== v2.2.0 -- 2020

Version `2.2.0` marks an important turning point for the Standard Library, introducing many new changes, not only in the library code but also in its development workflow and its documentation:

* *[red]#GitHub Hosting#* --
Development of the Standard Library has now moved to GitHub, allowing collaborative participation to the project via Git.
The new GitHub repository is now the official channel for the StdLib development and its distribution:

** link:https://github.com/AnssiR66/AlanStdLib[github.com/AnssiR66/AlanStdLib^, title="Visit the Standard Library repository on GitHub"]

* *[red]#AsciiDoc Documentation#* --
All library documentation has been ported to AsciiDoc, a powerful syntax for managing documentation in text-based source files which can be version controlled via Git, thus greatly simplifying collaborative editing on the documentation.
AsciiDoc is a format-agnostic syntax, meaning that the same source documents can now be converted (i.e. _built_) to numerous ouput formats, including HTML, PDF, and many others.
+
The new documentation is now built using Asciidoctor.
All documents are now distributed in HTML format, and some selected documents are also distributed in PDF format (e.g. _The StdLib Manual_, and other medium- to big-sized docs).
In the future, more formats might be supported (e.g. eBook formats), if there's a demand for them.

* *[red]#Semantic Versioning#* --